# gadgets.io

./: .gitmodules  LICENSE
Gadgets.IO/: .clang-format  AutoFormat.ps1  CMakeLists.txt  CreateWindows.ps1
Gadgets.IO/Backends/: CMakeLists.txt
Gadgets.IO/Backends/Emulated/: CMakeLists.txt
Gadgets.IO/Backends/Emulated/EmulatedDigitalInputDriver/: CMakeLists.txt
Gadgets.IO/Backends/Emulated/EmulatedDigitalInputDriver/Include/: EmulatedDigitalInputDriver.h
Gadgets.IO/Backends/Emulated/EmulatedDigitalInputDriver/Source/: EmulatedDigitalInputDriver.cpp
Gadgets.IO/Backends/Emulated/EmulatedDigitalOutputDriver/: CMakeLists.txt
Gadgets.IO/Backends/Emulated/EmulatedDigitalOutputDriver/Include/: EmulatedDigitalOutputDriver.h
Gadgets.IO/Backends/Emulated/EmulatedDigitalOutputDriver/Source/: EmulatedDigitalOutputDriver.cpp
Gadgets.IO/Core/: CMakeLists.txt
Gadgets.IO/Core/Include/: AsyncCallback.h  AsyncClassCallback.h  Callback.h  ClassCallback.h  IAsyncCallback.h  ICallback.h  ITaskQueue.h  TaskQueue.h
Gadgets.IO/Core/Source/: TaskQueue.cpp
Gadgets.IO/Devices/: CMakeLists.txt
Gadgets.IO/Devices/Core/: CMakeLists.txt
Gadgets.IO/Devices/Core/Include/: BaseDevice.h  BaseDriver.h  IDevice.h  IDriver.h
Gadgets.IO/Devices/Core/Source/: BaseDevice.cpp  BaseDriver.cpp
Gadgets.IO/Devices/DigitalInput/: CMakeLists.txt
Gadgets.IO/Devices/DigitalInput/Include/: BaseDigitalInputDriver.h  DigitalInput.h  IDigitalInput.h  IDigitalInputDriver.h
Gadgets.IO/Devices/DigitalInput/Source/: BaseDigitalInputDriver.cpp  DigitalInput.cpp
Gadgets.IO/Devices/DigitalOutput/: CMakeLists.txt
Gadgets.IO/Devices/DigitalOutput/Include/: BaseDigitalOutputDriver.h  DigitalOutput.h  IDigitalOutput.h  IDigitalOutputDriver.h
Gadgets.IO/Devices/DigitalOutput/Source/: BaseDigitalOutputDriver.cpp  DigitalOutput.cpp
InterfaceIO/: CMakeLists.txt  CreateWindows.ps1
InterfaceIO/Backends/: CMakeLists.txt
InterfaceIO/Backends/Emulated/: CMakeLists.txt
InterfaceIO/Backends/Emulated/EmulatedDigitalInputDriver/: CMakeLists.txt
InterfaceIO/Backends/Emulated/EmulatedDigitalInputDriver/Include/: EmulatedDigitalInputDriver.h
InterfaceIO/Backends/Emulated/EmulatedDigitalInputDriver/Source/: EmulatedDigitalInputDriver.cpp
InterfaceIO/Backends/Emulated/EmulatedDigitalOutputDriver/: CMakeLists.txt
InterfaceIO/Backends/Emulated/EmulatedDigitalOutputDriver/Include/: EmulatedDigitalOutputDriver.h
InterfaceIO/Backends/Emulated/EmulatedDigitalOutputDriver/Source/: EmulatedDigitalOutputDriver.cpp
InterfaceIO/Core/: CMakeLists.txt
InterfaceIO/Core/Include/: AsyncCallback.h  AsyncClassCallback.h  Callback.h  ClassCallback.h  IAsyncCallback.h  ICallback.h  ITaskQueue.h  TaskQueue.h
InterfaceIO/Core/Source/: TaskQueue.cpp
InterfaceIO/Devices/: CMakeLists.txt
InterfaceIO/Devices/Core/: CMakeLists.txt
InterfaceIO/Devices/Core/Include/: BaseDevice.h  BaseDriver.h  IDevice.h  IDriver.h
InterfaceIO/Devices/Core/Source/: BaseDevice.cpp  BaseDriver.cpp
InterfaceIO/Devices/DigitalInput/: CMakeLists.txt
InterfaceIO/Devices/DigitalInput/Include/: BaseDigitalInputDriver.h  DigitalInput.h  IDigitalInput.h  IDigitalInputDriver.h
InterfaceIO/Devices/DigitalInput/Source/: BaseDigitalInputDriver.cpp  DigitalInput.cpp
InterfaceIO/Devices/DigitalOutput/: CMakeLists.txt
InterfaceIO/Devices/DigitalOutput/Include/: BaseDigitalOutputDriver.h  DigitalOutput.h  IDigitalOutput.h  IDigitalOutputDriver.h
InterfaceIO/Devices/DigitalOutput/Source/: BaseDigitalOutputDriver.cpp  DigitalOutput.cpp
