add_library(InterfaceIO_Backends_EmulatedDigitalInputDriver)
add_library(InterfaceIO::Backends::EmulatedDigitalInputDriver ALIAS InterfaceIO_Backends_EmulatedDigitalInputDriver)

set_target_properties(InterfaceIO_Backends_EmulatedDigitalInputDriver PROPERTIES FOLDER "InterfaceIO/Backends/Emulated")

target_link_libraries(InterfaceIO_Backends_EmulatedDigitalInputDriver
	PUBLIC	InterfaceIO::Devices::DigitalInput
)

target_include_directories(InterfaceIO_Backends_EmulatedDigitalInputDriver
	PUBLIC	Include
)

target_sources(InterfaceIO_Backends_EmulatedDigitalInputDriver
	PRIVATE	Include/EmulatedDigitalInputDriver.h
			Source/EmulatedDigitalInputDriver.cpp
)
