add_library(InterfaceIO_Backends_EmulatedDigitalOutputDriver)
add_library(InterfaceIO::Backends::EmulatedDigitalOutputDriver ALIAS InterfaceIO_Backends_EmulatedDigitalOutputDriver)

set_target_properties(InterfaceIO_Backends_EmulatedDigitalOutputDriver PROPERTIES FOLDER "InterfaceIO/Backends/Emulated")

target_link_libraries(InterfaceIO_Backends_EmulatedDigitalOutputDriver
	PUBLIC	InterfaceIO::Devices::DigitalOutput
)

target_include_directories(InterfaceIO_Backends_EmulatedDigitalOutputDriver
	PUBLIC	Include
)

target_sources(InterfaceIO_Backends_EmulatedDigitalOutputDriver
	PRIVATE	Include/EmulatedDigitalOutputDriver.h
			Source/EmulatedDigitalOutputDriver.cpp
)
